[package]
name = "nalgebra-spacetime"
version = "0.2.3"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2018"
description = "Spacetime Extension for nalgebra"
documentation = "https://doc.qu1x.dev/nalgebra-spacetime"
repository = "https://github.com/qu1x/nalgebra-spacetime"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
	"lorentzian-space",
	"minkowski-space",
	"relativistic-physics",
	"special-relativity",
	"four-vector",
]
categories = [
	"science",
	"mathematics",
]
include = [
	"src/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE.md",
]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[badges]
travis-ci = { repository = "qu1x/nalgebra-spacetime" }

[dependencies]
nalgebra = "0.25"
num-traits = "0.2"
approx = { version = "0.4", default-features = false }
