[package]
name = "nalgebra-spacetime"
version = "0.3.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2021"
description = "Spacetime Extension for nalgebra"
documentation = "https://docs.rs/nalgebra-spacetime"
repository = "https://github.com/qu1x/nalgebra-spacetime"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"lorentzian-space",
	"minkowski-space",
	"relativistic-physics",
	"special-relativity",
	"four-vector",
]
categories = [
	"science",
	"mathematics",
]
include = [
	"src/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[dependencies]
nalgebra = { version = "0.32.4", features = ["rand"] }
num-traits = "0.2.18"
approx = { version = "0.5.1", default-features = false }
