[package]
name = "nalgebra-spacetime"
version = "0.6.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2021"
description = "Spacetime Extension for nalgebra"
documentation = "https://docs.rs/nalgebra-spacetime"
repository = "https://github.com/qu1x/nalgebra-spacetime"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"lorentzian-space",
	"minkowski-space",
	"relativistic-physics",
	"special-relativity",
	"four-vector",
]
categories = [
	"science",
	"mathematics",
]
include = [
	"src/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[dependencies]
approx = { version = "0.5.1", default-features = false }
nalgebra = { version = "0.33.0", features = ["rand"] }
